--- a/Ejercicio 2/Test.html
+++ b/Ejercicio 2/Test.html
@@ -1,15 +1,48 @@
-<html>
-    
-    <head>
 
-    </head>
 
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Top de diferentes cosas</title>
+</head>
+<body>
+    <main>  
+        <section>
+        <h2>Anime</h2>
+            <ul>
+                <li>Neon Genesis Evangelion</li>
+                <li>Monster</li>
+                <li>Jojos Bizarre Adventure</li>
+            </ul> 
 
-    </body>
 
-    <footer>
+        </section>
 
-    </footer>
+        <section>
+            <h2>Albums de HipHop</h2>
+            <ul>
+                <li>DAMN</li>
+                <li>My Beatiful Dark Twisted Fantasy</li>
+                <li>Yeezus</li>
+            </ul> 
+        </section>
+ 
+        <section>
+        <h2>Bandas más influyentes</h2> 
+            <ul>
+                <li>The Beatles</li>
+                <li>The Smiths</li>
+                <li>New Order</li>
+            </ul>  
+        </section>
+    </main>
 
+<footer>
+<p> Somos seres culturales. Cada manifestación artística marca nuestras vidas.</p>
+</footer>
+ 
+</body>
 </html>
