--- a/Ejercicio 2/Test.html
+++ b/Ejercicio 2/Test.html
@@ -14,8 +14,11 @@
         <h2>Anime</h2>
             <ul>
                 <li>Neon Genesis Evangelion</li>
+                <img src="https://th.bing.com/th/id/OIP.z5LYemwfmPRnwnJkCevXgAHaEK?pid=ImgDet&rs=1" alt="Evangelion" width="400" height="160">
                 <li>Monster</li>
+                <img src="https://th.bing.com/th/id/OIP.TzUWLpevFpbZXBkPTYhZSgHaEK?pid=ImgDet&rs=1" alt="Monster" width="400" height="160">
                 <li>Jojos Bizarre Adventure</li>
+                <img src="https://th.bing.com/th/id/R.944951e7f7c1fb275f171b05e79ae925?rik=DW5YQa10Lmq%2bog&pid=ImgRaw&r=0" alt="Jojos" width="400" height="160">
             </ul> 
 
 
@@ -25,8 +28,11 @@
             <h2>Albums de HipHop</h2>
             <ul>
                 <li>DAMN</li>
+                <img src="https://th.bing.com/th/id/OIP.QT_ze_xwLmxbepdySxndMQHaHa?pid=ImgDet&rs=1" alt="DAMN" width="200" height="200">
                 <li>My Beatiful Dark Twisted Fantasy</li>
+                <img src="https://th.bing.com/th/id/OIP.EW9crBzYMkvjtxaJJweYFwHaHS?pid=ImgDet&rs=1" alt="Kanye" width="200" height="200">
                 <li>Yeezus</li>
+                <img src="https://th.bing.com/th/id/OIP.lLWbzUVgeD9caurw8_lzwQHaGn?pid=ImgDet&rs=1" alt="Ye" width="200" height="200">
             </ul> 
         </section>
  
@@ -34,8 +40,11 @@
         <h2>Bandas más influyentes</h2> 
             <ul>
                 <li>The Beatles</li>
+                <img src="https://th.bing.com/th/id/R.29b2cace2337736b81cd75b0868f7175?rik=UXy4g7zE8dWaWQ&riu=http%3a%2f%2fwww.rokkers.com.mx%2fwp-content%2fuploads%2f2019%2f11%2fthe-beatles-playlist-2-.jpg&ehk=pFuM%2fGmM%2fRM4S%2fucahYSKWajMQacdpymPqqGlOOhs4M%3d&risl=&pid=ImgRaw&r=0" alt="Beatles" width="400" height="160">
                 <li>The Smiths</li>
+                <img src="https://img.europapress.es/fotoweb/fotonoticia_20160407123016_1280.jpg" alt="Smiths" width="400" height="160">
                 <li>New Order</li>
+                <img src="https://static.spin.com/files/2019/07/GettyImages-77551657-1563740651-compressed.jpg" alt="Smiths" width="400" height="160">
             </ul>  
         </section>
     </main>
