--- a/Ejercicio 2/Test.html
+++ b/Ejercicio 2/Test.html
@@ -25,7 +25,7 @@
         </section>
 
         <section>
-            <h2>Albums de HipHop</h2>
+            <h2>Álbumes de HipHop</h2>
             <ul>
                 <li>DAMN</li>
                 <img src="https://th.bing.com/th/id/OIP.QT_ze_xwLmxbepdySxndMQHaHa?pid=ImgDet&rs=1" alt="DAMN" width="200" height="200">
@@ -50,7 +50,7 @@
     </main>
 
 <footer>
-<p> Somos seres culturales. Cada manifestación artística marca nuestras vidas.</p>
+<h1> Somos seres culturales. Cada manifestación artística marca la forma en como vivimos nuestras vidas.</h1>
 </footer>
  
 </body>
