--- a/Entrega 1/index.html
+++ b/Entrega 1/index.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -63,10 +63,15 @@
       <li>Correo Electrónico: martin.zuluaga@upb.edu.co</li>
       <li><a href="https://www.linkedin.com/in/martinjzuluaga/"
         title="LinkedIn">LinkedIn</a>.</li>
+         <li><a href="https://github.com/mejara171"
+        title="GitHub">GitHub</a>.</li>
+
     </ul>
 
   </section>
-
+    
+      <h3>@ 2022 Martín Zuluaga</h3>
+    
 </footer>
  
 </body>
