--- a/Ejercicios/5. First JS/index.html
+++ b/Ejercicios/5. First JS/index.html
@@ -8,10 +8,15 @@
     <script src="script.js"></script>
 </head>
 <body>
+
     <p>Escriba un número natural para convertirlo en romano:</p>
     <input id="userVal1" type="text" value1="">
     <button onclick="ConvertRoman()">Submit</button>
+    <input type="button" onclick="myFunction()" value="Reset">
     <div id="results"></div>
-    
+
+
+
+
   </body>
 </html>
