--- a/Ejercicios/5. First JS/index.html
+++ b/Ejercicios/5. First JS/index.html
@@ -11,8 +11,8 @@
 
     <p>Escriba un número natural para convertirlo en romano:</p>
     <input id="userVal1" type="text" value1="">
-    <button onclick="ConvertRoman()">Submit</button>
-    <input type="button" onclick="myFunction()" value="Reset">
+    <button onclick="ConvertRoman()">Convertir</button>
+    <button onclick="Reset()">Reiniciar</button>
     <div id="results"></div>
 
 
